sd-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sd-api
  name: sd-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sd-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sd-network: "true"
        io.kompose.service: sd-api
    spec:
      containers:
        - command:
            - /bin/bash
            - ./scripts/entrypoint.dev.sh
          image: sd-api
          name: sd-api
          ports:
            - containerPort: 9080
          resources: {}
      restartPolicy: Always
status: {}
