sd-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sd-api
  name: sd-api
spec:
  ports:
    - name: "9080"
      port: 9080
      targetPort: 9080
  selector:
    io.kompose.service: sd-api
status:
  loadBalancer: {}
